--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.0.4",
     "tim-js-sdk": "^2.23.1"
   },
   "devDependencies": {
