--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@types/react-dom": "18.0.6",
     "eslint": "8.25.0",
     "eslint-config-next": "12.3.1",
+    "esm": "^3.2.25",
+    "tern": "^0.24.3",
     "typescript": "4.8.4"
   }
 }
