--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@reduxjs/toolkit": "^1.8.6",
+    "antd": "^4.23.6",
+    "axios": "^1.1.3",
+    "leancloud-realtime": "^5.0.0-rc.7",
+    "leancloud-storage": "^4.13.2",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.4",
-    "tim-js-sdk": "^2.23.1"
+    "sass": "^1.55.0"
   },
   "devDependencies": {
     "@types/node": "18.11.2",
